Update website with first feedbacks

--- a/actu.html
+++ b/actu.html
@@ -24,21 +24,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <title>
     SonoRezé - Actualités
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
   <!-- Nucleo Icons -->
-  <link href="../assets/css/nucleo-icons.css" rel="stylesheet" />
-  <link href="../assets/css/nucleo-svg.css" rel="stylesheet" />
+  <link href="./assets/css/nucleo-icons.css" rel="stylesheet" />
+  <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-  <link href="../assets/css/nucleo-svg.css" rel="stylesheet" />
+  <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
   <!-- CSS Files -->
-  <link id="pagestyle" href="../assets/css/soft-design-system.css?v=1.0.9" rel="stylesheet" />
+  <link id="pagestyle" href="./assets/css/soft-design-system.css?v=1.0.9" rel="stylesheet" />
 </head>
 
 <body class="blog-author bg-gray-100">
@@ -50,7 +50,7 @@
     <div class="col-12">
 <nav class="navbar navbar-expand-lg  blur blur-rounded top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
   <div class="container-fluid px-0">
-    <a class="navbar-brand font-weight-bolder ms-sm-3" href="../index.html" rel="tooltip" title="Accueil du site SonoRezé" data-placement="bottom">
+    <a class="navbar-brand font-weight-bolder ms-sm-3" href="./index.html" rel="tooltip" title="Accueil du site SonoRezé" data-placement="bottom">
       Accueil
     </a>
     <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,23 +67,23 @@
         <li class="nav-item dropdown dropdown-hover mx-2">
           <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" href="javascript:;" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
             Le projet
-            <img src="../assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
+            <img src="./assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
           </a>
           <div class="dropdown-menu dropdown-menu-animation dropdown-md p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
 
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./historique.html" class="dropdown-item border-radius-md">
+              <a href="./projet/historique.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Historique</span>
               </a>
-              <a href="./demarche.html" class="dropdown-item border-radius-md">
+              <a href="./projet/demarche.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Démarche</span>
               </a>
-              <a href="./territoire.html" class="dropdown-item border-radius-md">
+              <a href="./projet/territoire.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Territoire</span>
               </a>
-              <a href="./equipe.html" class="dropdown-item border-radius-md">
+              <a href="./projet/equipe.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Équipe</span>
               </a>
 
@@ -92,16 +92,16 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./historique.html" class="dropdown-item border-radius-md">
+              <a href="./projet/historique.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Historique</span>
               </a>
-              <a href="./demarche.html" class="dropdown-item border-radius-md">
+              <a href="./projet/demarche.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Démarche</span>
               </a>
-              <a href="./territoire.html" class="dropdown-item border-radius-md">
+              <a href="./projet/territoire.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Territoire</span>
               </a>
-              <a href="./equipe.html" class="dropdown-item border-radius-md">
+              <a href="./projet/equipe.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Équipe</span>
               </a>
 
@@ -114,17 +114,17 @@
         <li class="nav-item dropdown dropdown-hover mx-2">
           <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" href="javascript:;" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
             Participer
-            <img src="../assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
+            <img src="./assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
           </a>
           <div class="dropdown-menu dropdown-menu-animation dropdown-md p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
 
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-           <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+           <a href="./participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="./participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -133,10 +133,10 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+              <a href="./participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="./participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -150,23 +150,23 @@
         <li class="nav-item dropdown dropdown-hover mx-2">
           <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" href="javascript:;" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
             Résultats
-            <img src="../assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
+            <img src="./assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
           </a>
           <div class="dropdown-menu dropdown-menu-animation dropdown-md p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
 
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./discussion.html" class="dropdown-item border-radius-md">
+              <a href="./resultats/discussion.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Groupes de discussion</span>
               </a>
-              <a href="./cartes.html" class="dropdown-item border-radius-md">
+              <a href="./resultats/cartes.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Cartographies</span>
               </a>
-              <a href="./portail_interactif.html" class="dropdown-item border-radius-md">
+              <a href="./resultats/portail_interactif.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Portail interactif</span>
               </a>
-              <a href="./publications.html" class="dropdown-item border-radius-md">
+              <a href="./resultats/publications.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Publications</span>
               </a>
 
@@ -175,16 +175,16 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./discussion.html" class="dropdown-item border-radius-md">
+              <a href="./resultats/discussion.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Groupes de discussion</span>
               </a>
-              <a href="./cartes.html" class="dropdown-item border-radius-md">
+              <a href="./resultats/cartes.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Cartographies</span>
               </a>
-              <a href="./portail_interactif.html" class="dropdown-item border-radius-md">
+              <a href="./resultats/portail_interactif.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Portail interactif</span>
               </a>
-              <a href="./publications.html" class="dropdown-item border-radius-md">
+              <a href="./resultats/publications.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Publications</span>
               </a>
 
@@ -226,7 +226,7 @@
   <div class="page-header min-vh-50">
   <!--<div class="page-header min-vh-100">-->
     <div class="oblique position-absolute top-0 h-100 d-md-block d-none">
-      <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url(../assets/img/actu/2022_06_28_Ville_Reze_public.jpg)"></div>
+      <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url(./assets/img/actu/2022_06_28_Ville_Reze_public.jpg)"></div>
     </div>
     <div class="container">
       <div class="row">
@@ -258,7 +258,7 @@
           <div class="card card-plain card-blog">
             <div class="card-image border-radius-lg position-relative">
               <a href="https://www.reze.fr/actualite/sonoreze-2-reunion-dinformation-le-24-mai/" target="_blank">
-                <img class="w-100 border-radius-lg move-on-hover shadow" src="../assets/img/actu/2023_05_24_Reunion_lancement.png">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2023_05_24_Reunion_lancement.png">
               </a>
             </div>
             <div class="card-body px-0">
@@ -280,7 +280,7 @@
           <div class="card card-plain card-blog">
             <div class="card-image border-radius-lg position-relative">
               <a href="https://www.reze.fr/publication/reze-mensuel-n179-mai-2023/" target="_blank">
-                <img class="w-100 border-radius-lg move-on-hover shadow" src="../assets/img/actu/2023_04_27_Hebdo_Reze.png">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2023_04_27_Hebdo_Reze.png">
               </a>
             </div>
             <div class="card-body px-0">
@@ -299,7 +299,7 @@
 
         <div class="col-lg-3 col-md-12 col-12">
           <div class="card card-blog card-background">
-            <div class="full-background" style="background-image: url('../assets/img/actu/2023_02_09_ANR_resultat.png')"></div>
+            <div class="full-background" style="background-image: url('./assets/img/actu/2023_02_09_ANR_resultat.png')"></div>
             <div class="card-body">
               <div class="content-left text-start my-auto py-4">
                 <a href="https://anr.fr/fileadmin/aap/2022/selection/saps-ra-rp1-2022-selection.pdf" target="_blank">
@@ -337,7 +337,7 @@
           <div class="card card-plain card-blog">
             <div class="card-image border-radius-lg position-relative">
               <a href="https://lumieresdelaville.net/les-villes-sensorielles-effervescence-ou-tapage/" target="_blank">
-                <img class="w-100 border-radius-lg move-on-hover shadow" src="../assets/img/actu/2022_07_01_Lumieres_ville.png">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2022_07_01_Lumieres_ville.png">
               </a>
             </div>
             <div class="card-body px-0">
@@ -358,7 +358,7 @@
           <div class="card card-plain card-blog">
             <div class="card-image border-radius-lg position-relative">
               <a href="https://www.francebleu.fr/infos/societe/reze-des-dizaines-d-habitants-ont-enregistre-les-bruits-de-leur-ville-1656164514" target="_blank">
-                <img class="w-100 border-radius-lg move-on-hover shadow" src="../assets/img/actu/2022_06_22_France_Bleu.jpeg">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2022_06_22_France_Bleu.jpeg">
               </a>
             </div>
             <div class="card-body px-0">
@@ -379,7 +379,7 @@
           <div class="card card-plain card-blog">
             <div class="card-image border-radius-lg position-relative">
               <a href="https://www.ouest-france.fr/pays-de-la-loire/reze-44400/des-citoyens-mesurent-le-bruit-de-la-ville-94733a4a-c712-4fc8-b08d-616f13fc89ce" target="_blank">
-                <img class="w-100 border-radius-lg move-on-hover shadow" src="../assets/img/actu/2022_01_17_Ouest_France.jpeg">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2022_01_17_Ouest_France.jpeg">
               </a>
             </div>
             <div class="card-body px-0">
@@ -398,7 +398,7 @@
 
         <div class="col-lg-3 col-md-12 col-12">
           <div class="card card-blog card-background">
-            <div class="full-background" style="background-image: url('../assets/img/actu/2022_06_28_Ville_Reze.jpg')"></div>
+            <div class="full-background" style="background-image: url('./assets/img/actu/2022_06_28_Ville_Reze.jpg')"></div>
             <div class="card-body">
               <div class="content-left text-start my-auto py-4">
                 <a href="https://www.reze.fr/actualite/sonoreze-des-cartes-de-bruits-par-des-oreilles-citoyennes/" target="_blank">
@@ -424,7 +424,7 @@
           <div class="card card-plain card-blog">
             <div class="card-image border-radius-lg position-relative">
               <a href="https://www.francetvinfo.fr/france/ilsontlasolution/une-application-pour-mesurer-et-cartographier-les-nuisances-sonores_4879685.html" target="_blank">
-                <img class="w-100 border-radius-lg move-on-hover shadow" src="../assets/img/actu/2021_12_13_France_info.png">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2021_12_13_France_info.png">
               </a>
             </div>
             <div class="card-body px-0">
@@ -445,7 +445,7 @@
           <div class="card card-plain card-blog">
             <div class="card-image border-radius-lg position-relative">
               <a href="https://www.youtube.com/watch?v=VGHnDCbzrwA" target="_blank">
-                <img class="w-100 border-radius-lg move-on-hover shadow" src="../assets/img/actu/2021_12_10_France_3.png">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2021_12_10_France_3.png">
               </a>
             </div>
             <div class="card-body px-0">
@@ -466,7 +466,7 @@
           <div class="card card-plain card-blog">
             <div class="card-image border-radius-lg position-relative">
               <a href="https://www.francebleu.fr/infos/societe/reze-une-cartographie-des-bruits-de-la-ville-par-les-habitants-1638560158" target="_blank">
-                <img class="w-100 border-radius-lg move-on-hover shadow" src="../assets/img/actu/2021_12_06_France_Bleu.jpeg">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2021_12_06_France_Bleu.jpeg">
               </a>
             </div>
             <div class="card-body px-0">
@@ -512,15 +512,15 @@
 
   <!-- -------- END FOOTER 5 w/ DARK BACKGROUND ------- -->
   <!--   Core JS Files   -->
-  <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-  <script src="../assets/js/plugins/perfect-scrollbar.min.js"></script>
+  <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+  <script src="./assets/js/plugins/perfect-scrollbar.min.js"></script>
   <!--  Plugin for Parallax, full documentation here: https://github.com/wagerfield/parallax  -->
-  <script src="../assets/js/plugins/parallax.min.js"></script>
+  <script src="./assets/js/plugins/parallax.min.js"></script>
   <!-- Control Center for Soft UI Kit: parallax effects, scripts for the example pages etc -->
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
-  <script src="../assets/js/soft-design-system.min.js?v=1.0.9" type="text/javascript"></script>
+  <script src="./assets/js/soft-design-system.min.js?v=1.0.9" type="text/javascript"></script>
 
 </body>
 
