--- a/participer/collectivite.html
+++ b/participer/collectivite.html
@@ -27,7 +27,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href=".../assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <title>
-    SonoRezé - Habitants
+    SonoRezé - Collectivité
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -74,16 +74,16 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./historique.html" class="dropdown-item border-radius-md">
+              <a href="../projet/historique.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Historique</span>
               </a>
-              <a href="./demarche.html" class="dropdown-item border-radius-md">
+              <a href="../projet/demarche.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Démarche</span>
               </a>
-              <a href="./territoire.html" class="dropdown-item border-radius-md">
+              <a href="../projet/territoire.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Territoire</span>
               </a>
-              <a href="./equipe.html" class="dropdown-item border-radius-md">
+              <a href="../projet/equipe.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Équipe</span>
               </a>
 
@@ -92,16 +92,16 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./historique.html" class="dropdown-item border-radius-md">
+              <a href="../projet/historique.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Historique</span>
               </a>
-              <a href="./demarche.html" class="dropdown-item border-radius-md">
+              <a href="../projet/demarche.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Démarche</span>
               </a>
-              <a href="./territoire.html" class="dropdown-item border-radius-md">
+              <a href="../projet/territoire.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Territoire</span>
               </a>
-              <a href="./equipe.html" class="dropdown-item border-radius-md">
+              <a href="../projet/equipe.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Équipe</span>
               </a>
 
@@ -121,10 +121,10 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-           <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+           <a href="./habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="./collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -133,10 +133,10 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+              <a href="./habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="./collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -157,16 +157,16 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./discussion.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/discussion.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Groupes de discussion</span>
               </a>
-              <a href="./cartes.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/cartes.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Cartographies</span>
               </a>
-              <a href="./portail_interactif.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/portail_interactif.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Portail interactif</span>
               </a>
-              <a href="./publications.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/publications.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Publications</span>
               </a>
 
@@ -175,16 +175,16 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./discussion.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/discussion.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Groupes de discussion</span>
               </a>
-              <a href="./cartes.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/cartes.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Cartographies</span>
               </a>
-              <a href="./portail_interactif.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/portail_interactif.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Portail interactif</span>
               </a>
-              <a href="./publications.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/publications.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Publications</span>
               </a>
 
@@ -196,7 +196,7 @@
 
         <!-- Actualités -->
         <li class="nav-item ms-lg-0">
-          <a class="nav-link nav-link-icon me-2" href="./actu.html">
+          <a class="nav-link nav-link-icon me-2" href="../actu.html">
             <p class="d-inline text-sm z-index-1 font-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Actualités">Actualités</p>
           </a>
         </li>
@@ -204,7 +204,7 @@
 
         <!-- Contact -->
         <li class="nav-item ms-lg-0">
-          <a class="nav-link nav-link-icon me-2" href="./contact.html">
+          <a class="nav-link nav-link-icon me-2" href="../contact.html">
             <p class="d-inline text-sm z-index-1 font-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Nous contacter">Contact</p>
           </a>
         </li>
@@ -226,13 +226,13 @@
   <div class="page-header min-vh-50">
   <!--<div class="page-header min-vh-100">-->
     <div class="oblique position-absolute top-0 h-100 d-md-block d-none">
-      <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url(../assets/img/participer_habitant/tonitorfer_bandeau_large.jpg)"></div>
+      <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url(../assets/img/demarche/tonitorfer_bandeau_large.jpg)"></div>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-7 d-flex justify-content-center flex-column">
-          <h1 class="text-gradient text-primary">Vous êtes rezén.ne</h1>
-          <p class="lead pe-5 me-5">Que vous viviez ou travailliez à Rezé, vous pouvez participer !</p>
+          <h1 class="text-gradient text-primary">Vous êtes une collectivité</h1>
+          <p class="lead pe-5 me-5">Le projet SonoRezé vous intéresse et/ou vous souhaitez participer ? Cette page est faite pour apporter des réponses à vos questions</p>
         </div>
       </div>
     </div>
@@ -246,26 +246,17 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 mx-auto text-center">
-        <h2 class="text-gradient text-primary mb-3">Qui est concerné ?</h2>
-        <p>Si vous <b>habitez</b> ou vous <b>travaillez à Rezé</b> vous pouvez participer à ce projet.  L'objectif est de disposer de participants connaissant un minimum le territoire Rezéen et y passant assez souvent pour pouvoir contribuer.
-        </p>
-        <h2 class="text-gradient text-primary mb-3">Suis-je engagé ?</h2>
-        <p>
-           La participation est <b>totalement libre et non contraignante</b>. Vous pouvez vous investir en fonction de vos envies et vos disponibilités.
-        </p>
-        <h2 class="text-gradient text-primary mb-3">Comment participer ?</h2>
-        <p>
-          Pour participer, nous vous proposons <b>deux moyens d'actions : la mesure et la participation à des groupes de discussions</b>. Ces deux points peuvent être cumulés ou pas; et vous pouvez modifier votre implication à l'un ou l'autre tout le long du projet.
-        </p>
-        </br>
-      </div><!-- col-lg-12 -->
+ 
+      <div class="row justify-content-center text-center my-sm-5">
+        <div class="col-lg-12">
+          <h2 class="text-primary text-gradient">Comment participer ?</h2>
+          <p class="lead">Comme décrit dans la page "<a href="./demarche.html">Démarche</a>", le projet SonoRezé s'inscrit dans un triptyque <i>"Collectivité locale – Habitants – Chercheurs"</i>. Dans le cadre de SonoRezé la collectivité partenaire est la ville de Rezé. Néanmoins, en tant que collectivité "non membre du consortium initial", vous avez quand même la possibilité de participer au projet.
+            <br><br>
+          Deux possibilités s'offrent à vous: 1/ être "observateur" ou 2/ reproduire le projet sur votre territoire.</p>
+        </div><!-- col-lg-6 -->
+      </div>
     </div><!-- row -->
-
   </div><!-- container -->
-
-
-
 
 
   <!-- Container Tâche 1 -->
@@ -273,8 +264,8 @@
     <div class="row">
       <div class="col-lg-3">
         <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
-          <h3>Mesurer</h3>
-          <h6 class="text-secondary font-weight-normal pe-3">Réaliser des mesures des environnements sonores</h6>
+          <h3>Observer le projet</h3>
+          <h6 class="text-secondary font-weight-normal pe-3">xxxxxxxxxxxxxxxxxxxxxxxx</h6>
         </div>
       </div><!-- col-lg-3 -->
 
@@ -286,48 +277,16 @@
         <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
           <div class="container border-bottom">
             <div class="row justify-space-between py-2">
-                <h5 class="text-primary text-gradient">NoiseCapture</h5>
+                <h5 class="text-primary text-gradient">En cours de construction</h5>
                 <p>
-                Pour mesurer votre environnement sonore (le bruit ambiant, les oiseaux, le vent dans les arbres, ...), nous vous proposons d'utiliser l'application <a href="https://noise-planet.org/noisecapture.html" target="_blank"><b>NoiseCapture</b></a>, développée par l'<a href="https://umrae.fr/" target="_blank">UMRAE</a> membre du projet. 
-                <br><br>
-                En quelques mots, cette application :<br>
-                - ne fonctionne <b>que sur les smartphones Android</b>,<br>
-                - est <b>gratuite, sans publicités et ne collecte aucune information sensible</b> sur votre smartphone,<br>
-                - ne nécéssite <b>aucune inscription préalable</b> (pas de compte avec un identifiant / mot de passe),<br>
-                - <b>n'enregistre pas l'audio</b> (le bruit, les discussions, ...). Seuls des indicateurs acoustiques sont collectés. <b>Ces indicateurs ne permettent pas de reconnaître une personne ou de reconstruire une discussion.</b><br>
-
+                ... merci pour votre patience 
                 </p>
             </div><!-- row -->
           </div><!-- container -->
         </div>
       </div><!-- col-12 -->
 
-      <!-- T1.1 -->
-      <div class="col-12">
-        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
-          <div class="container border-bottom">
-            <div class="row justify-space-between py-2">
-                <h5 class="text-primary text-gradient">Comment ça marche ?</h5>
-                <p>
-                Pour savoir comment <b>installer</b> l'application et <b>réaliser une mesure</b>, vous pouvez consulter <a href="https://noise-planet.org/noisecapture_protocol.html" target="_blank"><b>cette page explicative</b></a>.
-                </p>
-                <p align="center">
-                <img src="../assets/img/participer_habitant/noisecapture_installer_mesurer.png" width="100%">
-                </p>
-                <p>
-                Une fois la mesure réalisée et décrite, les données sont automatiquement transmises sur notre serveur. À partir de là, les informations sont contrôlées et mises en forme pour alimenter une base de données communautaire et mondiale. Ces données sont directement visibles sur <a href="https://noise-planet.org/map_noisecapture/index.html#15/47.1829/-1.5718/" target="_blank"><b>cette carte interactive</b></a>.
-                </p>
-                <p align="center">
-                <img src="../assets/img/participer_habitant/carte_noisecapture_reze.png" width="100%">
-                </p>
-                
-            </div><!-- row -->
-            <br>
-          </div><!-- container -->
-        </div>
-      </div><!-- col-12 -->
 
-      
 
         </div> <!-- row mt-3 -->
       </div><!-- col-lg-9 -->
@@ -335,57 +294,39 @@
   </div><!-- container -->
 
 
-  <!-- Container Tâche 2 -->
+  <!-- Container Tâche 1 -->
   <div class="container mt-sm-5 mt-3">
     <div class="row">
       <div class="col-lg-3">
         <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
-          <h3>Discuter</h3>
-          <h6 class="text-secondary font-weight-normal pe-3">Participer à des groupes de discussion</h6>
+          <h3>Reproduire la démarche</h3>
+          <h6 class="text-secondary font-weight-normal pe-3">xxxxxxxxxxxxxxxxxxxxxxxx</h6>
         </div>
       </div><!-- col-lg-3 -->
 
       <div class="col-lg-9">
         <div class="row mt-3">
 
-      <!-- T2.1 -->
+      <!-- T1.1 -->
       <div class="col-12">
         <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
           <div class="container border-bottom">
             <div class="row justify-space-between py-2">
-                <h5 class="text-primary text-gradient">Echanger pour appréhender et agir sur "<i>la signature sonore</i>" de Rezé</h5>
+                <h5 class="text-primary text-gradient">En cours de construction</h5>
                 <p>
-                À travers des temps d'échanges programmés, les participants seront invités à venir faire part de leur expérience sonore du territoire Rezéen.
-                <br>
-                Ces moments conviviaux sont également le moyen de collecter les attentes des citoyens et de les partager avec les équipes de la ville, membre du projet.
-                <br><br>
-                Lors de la première session du projet SonoRezé (2021-22), ces groupes de discussion on permis de faire émerger de nombreuses pistes intéressantes, qui sont résumées <a href="./discussion.html"><b>sur cette page</b></a>.
-                </p>
-                <p align="center">
-                <img src="../assets/img/participer_habitant/tonitorfer_groupe_discussion_credit.png" width="100%">
+                ... merci pour votre patience
                 </p>
             </div><!-- row -->
           </div><!-- container -->
         </div>
       </div><!-- col-12 -->
 
- 
-
-        </div> <!-- row mt-3 -->
-      </div><!-- col-lg-9 -->
-    </div><!-- row -->
-  </div><!-- container -->
-
-
-
-
-
-
-
-
 
 
 </section>
+
+
+
 
 
 
@@ -402,7 +343,7 @@
           <p class="my-4 text-sm">
             Auteur : G. Petit (<a href="https://www.umrae.fr/" target="_blank">UMRAE</a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank">Université Gustave Eiffel</a>) - 2023</br>
             -</br>
-            Illustrations : <a href="http://tonitorfer.over-blog.com/" target="_blank">ToniTorfer</a> - tous droits réservés</br>
+            Illustration dans le bandeau : <a href="https://www.facebook.com/tonitorfer/" target="_blank">ToniTorfer</a> - tous droits réservés</br>
             Template du site : All rights reserved. Copyright © <script>document.write(new Date().getFullYear())</script> Soft UI Design System by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
           </p>
         </div>
