--- a/projet/equipe.html
+++ b/projet/equipe.html
@@ -121,10 +121,10 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-           <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+           <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -133,10 +133,10 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+              <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -157,16 +157,16 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./discussion.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/discussion.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Groupes de discussion</span>
               </a>
-              <a href="./cartes.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/cartes.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Cartographies</span>
               </a>
-              <a href="./portail_interactif.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/portail_interactif.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Portail interactif</span>
               </a>
-              <a href="./publications.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/publications.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Publications</span>
               </a>
 
@@ -175,16 +175,16 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./discussion.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/discussion.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Groupes de discussion</span>
               </a>
-              <a href="./cartes.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/cartes.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Cartographies</span>
               </a>
-              <a href="./portail_interactif.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/portail_interactif.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Portail interactif</span>
               </a>
-              <a href="./publications.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/publications.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Publications</span>
               </a>
 
@@ -196,7 +196,7 @@
 
         <!-- Actualités -->
         <li class="nav-item ms-lg-0">
-          <a class="nav-link nav-link-icon me-2" href="./actu.html">
+          <a class="nav-link nav-link-icon me-2" href="../actu.html">
             <p class="d-inline text-sm z-index-1 font-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Actualités">Actualités</p>
           </a>
         </li>
@@ -204,7 +204,7 @@
 
         <!-- Contact -->
         <li class="nav-item ms-lg-0">
-          <a class="nav-link nav-link-icon me-2" href="./contact.html">
+          <a class="nav-link nav-link-icon me-2" href="../contact.html">
             <p class="d-inline text-sm z-index-1 font-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Nous contacter">Contact</p>
           </a>
         </li>
@@ -488,7 +488,7 @@
       <div class="row mt-4">
         <div class="col-md-12 text-start mb-5 mt-5">
           <h4 class="text-white z-index-1 position-relative">Tiers-veilleur</h4>
-          <p class="text-white opacity-8 mb-0">Auxilia occupe un rôle de Tiers-veilleur dans le cadre du projet Sonorezé II. Cette mission consiste à apporter un regard extérieur, ainsi qu’à identifier les <i>"sources d’incompréhensions, de malentendus ou de tensions entre les partenaires</i>, et à proposer des solutions.</p>
+          <p class="text-white opacity-8 mb-0">Nicolas occupe un rôle de Tiers-veilleur dans le cadre du projet Sonorezé II. Cette mission consiste à être facilitateur pour favoriser la co-construction des savoirs et fluidifier la coopération des différents acteurs. Il apporte un regard extérieur et aide à identifier les sources d’incompréhensions, de malentendus ou de tensions entre les partenaires en proposant des solutions.</p>
         </div>
       <!--</div>
       <div class="row mt-4">-->
@@ -786,7 +786,7 @@
           <p class="my-4 text-sm">
             Auteur : G. Petit (<a href="https://www.umrae.fr/" target="_blank">UMRAE</a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank">Université Gustave Eiffel</a>) - 2023</br>
             -</br>
-            Illustration dans le bandeau : <a href="http://tonitorfer.over-blog.com/" target="_blank">ToniTorfer</a> - tous droits réservés</br>
+            Illustration dans le bandeau : <a href="https://www.facebook.com/tonitorfer/" target="_blank">ToniTorfer</a> - tous droits réservés</br>
             Template du site : All rights reserved. Copyright © <script>document.write(new Date().getFullYear())</script> Soft UI Design System by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
           </p>
         </div>
