--- a/projet/historique.html
+++ b/projet/historique.html
@@ -18,7 +18,6 @@
 =========================================================
 -->
 
-
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="http://schema.org/WebPage">
 
@@ -28,7 +27,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href=".../assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <title>
-    SonoRezé - Territoire
+    SonoRezé - Historique
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -122,10 +121,10 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-           <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+           <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -134,10 +133,10 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+              <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -158,16 +157,16 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./discussion.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/discussion.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Groupes de discussion</span>
               </a>
-              <a href="./cartes.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/cartes.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Cartographies</span>
               </a>
-              <a href="./portail_interactif.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/portail_interactif.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Portail interactif</span>
               </a>
-              <a href="./publications.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/publications.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Publications</span>
               </a>
 
@@ -176,16 +175,16 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./discussion.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/discussion.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Groupes de discussion</span>
               </a>
-              <a href="./cartes.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/cartes.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Cartographies</span>
               </a>
-              <a href="./portail_interactif.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/portail_interactif.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Portail interactif</span>
               </a>
-              <a href="./publications.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/publications.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Publications</span>
               </a>
 
@@ -197,7 +196,7 @@
 
         <!-- Actualités -->
         <li class="nav-item ms-lg-0">
-          <a class="nav-link nav-link-icon me-2" href="./actu.html">
+          <a class="nav-link nav-link-icon me-2" href="../actu.html">
             <p class="d-inline text-sm z-index-1 font-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Actualités">Actualités</p>
           </a>
         </li>
@@ -205,7 +204,7 @@
 
         <!-- Contact -->
         <li class="nav-item ms-lg-0">
-          <a class="nav-link nav-link-icon me-2" href="./contact.html">
+          <a class="nav-link nav-link-icon me-2" href="../contact.html">
             <p class="d-inline text-sm z-index-1 font-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Nous contacter">Contact</p>
           </a>
         </li>
@@ -227,13 +226,14 @@
   <div class="page-header min-vh-50">
   <!--<div class="page-header min-vh-100">-->
     <div class="oblique position-absolute top-0 h-100 d-md-block d-none">
-      <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url(../assets/img/territoire/tonitorfer_bandeau_large.jpg)"></div>
+      <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url(../assets/img/historique/tonitorfer_bandeau_large.jpg)"></div>
     </div>
+
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-7 d-flex justify-content-center flex-column">
-          <h1 class="text-gradient text-primary">Territoire</h1>
-          <p class="lead pe-5 me-5">Rezé, un territoire d'étude vaste et aux multiples facettes</p>
+          <h1 class="text-gradient text-primary">Historique</h1>
+          <p class="lead pe-5 me-5">Un projet démarré en 2021 et courant jusqu'en 2025</p>
         </div>
       </div>
     </div>
@@ -244,75 +244,147 @@
 
 
 
-<section class="py-7">
-  <div class="container">
+<!---------------------------------------------------------------------------------------->
+<section class="my-5 py-5">
+  <div class="container mt-sm-5 mt-3">
+<p align="center">Le projet SonoRezé est une initiative démarrée en 2021, puis poursuivie en 2023, financée grâce à deux programmes de recherche décrits ci-dessous.</p>
+</div>
+
+  <!-- Container SonoRezé II -->
+  <div class="container mt-sm-5 mt-3">
     <div class="row">
-      <div class="col-lg-12 mx-auto text-center">
-        <h2 class="mb-0">Rezé</h2>
-        <h3 class="text-gradient text-primary mb-3">Une commune de l'agglomération Nantaise ...</h3>
-        <p>"<cite>Rezé, ville du Sud-Loire, située à quelques minutes du centre-ville de Nantes, est la 3e commune de Nantes Métropole, la communauté urbaine de Nantes et la 4e de Loire-Atlantique.</cite>" (<a href="https://www.reze.fr/la-ville/le-territoire/decouvrir-reze/" target="_blank">Source</a>).</p>
-        <p>Avec près de 43 000 habitants (rezéen.ne.s) au dernier recensement de 2019.</p>
-      </br>
-      <img src="../assets/img/territoire/Carte_zone.png" alt="Carte de situation de Rezé" width=100%>
-      </div>
-    </div>
-    <div class="row mt-6">
+      <div class="col-lg-3">
+        <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
+          <h3>Sonorezé II</h3>
+          <h6 class="text-secondary font-weight-normal pe-3">2023-2025</h6>
+        </div>
+      </div><!-- col-lg-3 -->
+
+      <div class="col-lg-9">
+        <div class="row mt-3">
+
+      <!-- Le projet -->
+      <div class="col-12">
+        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
+          <div class="container border-bottom">
+            <div class="row justify-space-between py-2">
+                <h5 class="text-primary text-gradient">Le projet</h5>
+                <p>Le projet "<b>SonoRezé II</b>" s'inscrit dans la continuité du premier volet "<b>SonoRezé</b>". <br>
+                  Dans le second volet, il s’agira d’approfondir le diagnostic des environnements sonores de la ville de Rezé réalisé dans le premier volet, mais également de définir collectivement quelques actions à mener autour de la problématique des environnements sonores, et de réfléchir au déploiement de cette approche innovante sur une variété de territoires.
+                </p>
+            </div><!-- row -->
+          </div><!-- container -->
+        </div>
+      </div><!-- col-12 -->
 
 
+      <!-- Consortium -->
+      <div class="col-12">
+        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
+          <div class="container border-bottom">
+            <div class="row justify-space-between py-2">
+                <h5 class="text-primary text-gradient">Consortium</h5>
+                <p>SonoRezé II est réalisé par les acteurs suivants :</br>
+                  - Collectivité : <a href="https://www.reze.fr/" target="_blank"><b>Ville de Rezé</b></a> </br>
+                  - Académiques : Unité Mixte de Recherche en Acoustique Environmentale (<a href="https://umrae.fr/" target="_blank"><b>UMRAE</b></a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank"><b>Université Gustave Eiffel</b></a>), Laboratoire "Espaces et SOciétés" (<a href="http://eso.cnrs.fr/eso.cnrs.fr/fr/index.html" target="_blank"><b>ESO</b></a> - UMR 6590 - <a href="https://www.institut-agro-rennes-angers.fr/" target="_blank"><b>Institut Agro Rennes Angers</b></a>)</br>
+                  - Tiers veilleur : <a href="https://www.auxilia-conseil.com/" target="_blank"><b>Auxilia Conseil</b></a>
+                </p>
+                <p>Le pilotage du projet est effectué par l'Université Gustave Eiffel (UMRAE)</p>
+                <img src="../assets/img/historique/consortium_sonoreze_2.png" width="100%">
+            </div><!-- row -->
+          </div><!-- container -->
+        </div>
+      </div><!-- col-12 -->
+
+
+      <!-- Financement -->
+      <div class="col-12">
+        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
+          <div class="container border-bottom">
+            <div class="row justify-space-between py-2">
+                <h5 class="text-primary text-gradient">Financement</h5>
+                <p>Le projet "SonoRezé II" est financé par l'<a href="https://anr.fr/" target="_blank"><b>Agence Nationale de la Recherche</b></a> (ANR), dans le cadre de l'<i>Appel à projets Science avec et pour la société – Recherches participatives 1 (SAPS-RA-RP1)</i>. Ce financement, à hauteur de 249 716€, court de 2023 à 2025.
+                </p>
+                <img src="../assets/img/historique/financement_sonoreze_2.png" width="100%">
+            </div><!-- row -->
+          </div><!-- container -->
+        </div>
+      </div><!-- col-12 -->
+
+        </div> <!-- row mt-3 -->
+      </div><!-- col-lg-9 -->
+    </div><!-- row -->
+  </div><!-- container -->
+
+
+  <!-- Container SonoRezé I -->
+  <div class="container mt-sm-5 mt-3">
     <div class="row">
-      <div class="col-lg-12 mx-auto text-center">
-        <h3 class="text-gradient text-primary mb-3">... avec de nombreuses spécificités "acoustiques"</h3>
-      </div>
-    </div>
-    <div class="row mt-6">
-
-      <div class="col-lg-4 col-md-8">
-        <div class="card bg-gradient-primary">
-          <div class="card-body">
-            <h6 class="text-white mb-0 font-weight-bolder" align="center">Influence directe de l'aéroport de Nantes Atlantique</h6>
-            </br>
-            <img src="../assets/img/territoire/Carte_zone_aeroport.png" alt="Carte de situation de l'aéroport" width=100%>
-          </div>
+      <div class="col-lg-3">
+        <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
+          <h3>Sonorezé</h3>
+          <h6 class="text-secondary font-weight-normal pe-3">2021-22</h6>
         </div>
-      </div>
+      </div><!-- col-lg-3 -->
 
-      <div class="col-lg-4 col-md-8 ms-md-auto">
-        <div class="card bg-gradient-primary">
-          <div class="card-body">
-            <h6 class="text-white mb-0 font-weight-bolder" align="center">Proximité du périphérique Nantais</h6>
-            </br></br>
-            <img src="../assets/img/territoire/Carte_zone_peripherique.png" alt="Carte de situation du périphérique" width=100%>
-          </div>
+      <div class="col-lg-9">
+        <div class="row mt-3">
+
+      <!-- Le projet -->
+      <div class="col-12">
+        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
+          <div class="container border-bottom">
+            <div class="row justify-space-between py-2">
+                <h5 class="text-primary text-gradient">Le projet</h5>
+                <p>La Ville de Rezé et l'Université Gustave Eiffel se sont associées pour réaliser un diagnostic citoyen des environnements sonores de la ville de Rezé. Grâce à la forte mobilisation des habitants, une cartographie participative des environnements sonores a été produite. De plus, des groupes de discussion associant habitants, élus et chercheurs, ont questionné la qualité des environnements sonores. Enfin, le projet a fait l'objet d'un rendu intégrant des performances artistiques originales. Ceci a constitué la première expérience de cartographie participative à l’échelle d’une collectivité.</p>
+
+            </div><!-- row -->
+          </div><!-- container -->
         </div>
-      </div>
+      </div><!-- col-12 -->
 
-      <div class="col-lg-4 col-md-8 ms-md-auto">
-        <div class="card bg-gradient-primary">
-          <div class="card-body">
-            <h6 class="text-white mb-0 font-weight-bolder" align="center">De multiples espaces verts (parcs, jardins, ...)</h6>
-            </br>
-            <img src="../assets/img/territoire/Carte_zone_verdure.png" alt="Carte de situation de la végétation" width=100%>
-          </div>
+
+      <!-- Consortium -->
+      <div class="col-12">
+        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
+          <div class="container border-bottom">
+            <div class="row justify-space-between py-2">
+                <h5 class="text-primary text-gradient">Consortium</h5>
+                <p>SonoRezé I a été réalisé par les acteurs suivants :</br>
+                  - Collectivité : <a href="https://www.reze.fr/" target="_blank"><b>Ville de Rezé</b></a> </br>
+                  - Académiques : Unité Mixte de Recherche en Acoustique Environmentale (<a href="https://umrae.fr/" target="_blank"><b>UMRAE</b></a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank"><b>Université Gustave Eiffel</b></a>)
+                </p>
+                <p>Le pilotage du projet a été effectué par l'Université Gustave Eiffel (UMRAE)</p>
+                <img src="../assets/img/historique/consortium_sonoreze_1.png" width="100%">
+            </div><!-- row -->
+          </div><!-- container -->
         </div>
-      </div>
+      </div><!-- col-12 -->
 
-    </div>    
-  </div>
+      <!-- Financement -->
+      <div class="col-12">
+        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
+          <div class="container border-bottom">
+            <div class="row justify-space-between py-2">
+                <h5 class="text-primary text-gradient">Financement</h5>
+                <p>Le projet "SonoRezé I" a été financé par l'<a href="http://www.future-isite.fr/li-site-future/" target="_blank"><b>I-Site Future</b></a> dans le cadre d'un appel d'offre <i>« chercheur.e.s citoyen.ne.s »</i>. Ce financement, pour un montant de 14 418€, courrait de 2021 à juin 2022.
+                </p>
+                <img src="../assets/img/historique/financement_sonoreze_1.png" width="100%">
+            </div><!-- row -->
+          </div><!-- container -->
+        </div>
+      </div><!-- col-12 -->
+
+
+        </div> <!-- row mt-3 -->
+      </div><!-- col-lg-9 -->
+    </div><!-- row -->
+  </div><!-- container -->
+
 </section>
-
-<section>
-    <div class="container">
-    <div class="row">
-      <div class="col-lg-12 mx-auto text-center">
-        <h5 class="text-gradient text-primary mb-3">Naviguer dans la carte sur le portail OpenStreetMap &copy;</h5>
-<iframe width="100%" height="500px" frameborder="0" allowfullscreen src="https://umap.openstreetmap.fr/fr/map/reze_911457?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false"></iframe><p><a href="https://umap.openstreetmap.fr/fr/map/reze_911457" target="_blank">Voir en plein écran</a></p>
+<!---------------------------------------------------------------------------------------->
 
 
-</div>
-</div>
-</div>
-
-</section>
 
 
 <!---------------------------------------------------------------------------------------->
@@ -327,8 +399,7 @@
           <p class="my-4 text-sm">
             Auteur : G. Petit (<a href="https://www.umrae.fr/" target="_blank">UMRAE</a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank">Université Gustave Eiffel</a>) - 2023</br>
             -</br>
-            Illustration dans le bandeau : <a href="http://tonitorfer.over-blog.com/" target="_blank">ToniTorfer</a> - tous droits réservés</br>
-            Fonds cartographiques : &copy; Contributeurs <a href="https://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> / <a href="https://www.maptiler.com" target="_blank">&copy; MapTiler</a></br>
+            Illustration dans le bandeau : <a href="https://www.facebook.com/tonitorfer/" target="_blank">ToniTorfer</a> - tous droits réservés</br>
             Template du site : All rights reserved. Copyright © <script>document.write(new Date().getFullYear())</script> Soft UI Design System by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
           </p>
         </div>
