--- a/projet/territoire.html
+++ b/projet/territoire.html
@@ -18,16 +18,17 @@
 =========================================================
 -->
 
+
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="http://schema.org/WebPage">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href=".../assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <title>
-    SonoRezé - Contact
+    SonoRezé - Territoire
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -41,7 +42,8 @@
   <link id="pagestyle" href="../assets/css/soft-design-system.css?v=1.0.9" rel="stylesheet" />
 </head>
 
-<body class="contact-us">
+<body class="blog-author bg-gray-100">
+
 
 <!-- Navbar -->
 <div class="container position-sticky z-index-sticky top-0">
@@ -120,10 +122,10 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-           <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+           <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -132,10 +134,10 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+              <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -156,16 +158,16 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./discussion.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/discussion.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Groupes de discussion</span>
               </a>
-              <a href="./cartes.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/cartes.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Cartographies</span>
               </a>
-              <a href="./portail_interactif.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/portail_interactif.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Portail interactif</span>
               </a>
-              <a href="./publications.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/publications.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Publications</span>
               </a>
 
@@ -174,16 +176,16 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./discussion.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/discussion.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Groupes de discussion</span>
               </a>
-              <a href="./cartes.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/cartes.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Cartographies</span>
               </a>
-              <a href="./portail_interactif.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/portail_interactif.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Portail interactif</span>
               </a>
-              <a href="./publications.html" class="dropdown-item border-radius-md">
+              <a href="../resultats/publications.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Publications</span>
               </a>
 
@@ -195,7 +197,7 @@
 
         <!-- Actualités -->
         <li class="nav-item ms-lg-0">
-          <a class="nav-link nav-link-icon me-2" href="./actu.html">
+          <a class="nav-link nav-link-icon me-2" href="../actu.html">
             <p class="d-inline text-sm z-index-1 font-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Actualités">Actualités</p>
           </a>
         </li>
@@ -203,7 +205,7 @@
 
         <!-- Contact -->
         <li class="nav-item ms-lg-0">
-          <a class="nav-link nav-link-icon me-2" href="./contact.html">
+          <a class="nav-link nav-link-icon me-2" href="../contact.html">
             <p class="d-inline text-sm z-index-1 font-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Nous contacter">Contact</p>
           </a>
         </li>
@@ -218,72 +220,99 @@
 <!-- End Navbar -->
 
 
-  <!-- -------- START HEADER 8 w/ card over right bg image ------- -->
-  <!--
-  <header>
-    <div class="page-header min-vh-85">
-      <div>
-        <!--<img class="position-absolute fixed-top ms-auto w-50 h-100 z-index-0 d-none d-sm-none d-md-block border-radius-section border-top-end-radius-0 border-top-start-radius-0 border-bottom-end-radius-0" src="../assets/img/contact/tonitorfer_bandeau.jpg" alt="Contact" >
-        <img src="../assets/img/contact/tonitorfer_bandeau.jpg" alt="Oiseau contact - ToniTorfer" width="100%">
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-7 d-flex justify-content-center flex-column">
-            <div class="card d-flex blur justify-content-center p-4 shadow-lg my-sm-0 my-sm-6 mt-8 mb-5">
-              <div class="text-center">
-                <h3 class="text-gradient text-primary">Nous contacter</h3>
-                <p class="mb-0">
-                  Pour toute question ou remarque concernant SonoRezé, n'hésitez pas à nous contacter via le mail suivant :</br></br> <a href="mailto:info@sonoreze.fr?subject=Contact depuis le site SonoRezé"><b>info@sonoreze.fr</b></a>
-                </p>
-                </br>
-                </br>
-                <img src="../assets/img/contact_icon.png" alt="Bulle contact" width="50%">
-              </div>
-            </div>
-          </div>
+
+
+<!-- -------- Header ------- -->
+<header>
+  <div class="page-header min-vh-50">
+  <!--<div class="page-header min-vh-100">-->
+    <div class="oblique position-absolute top-0 h-100 d-md-block d-none">
+      <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url(../assets/img/territoire/tonitorfer_bandeau_large.jpg)"></div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-7 d-flex justify-content-center flex-column">
+          <h1 class="text-gradient text-primary">Territoire</h1>
+          <p class="lead pe-5 me-5">Rezé, un territoire d'étude vaste et aux multiples facettes</p>
         </div>
       </div>
     </div>
-  </header>-->
+  </div>
+</header>
+<!-- -------- End Header ------- -->
 
 
 
 
-
-  <section>
-    <div class="page-header min-vh-70">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-6 col-lg-5 col-md-7 d-flex flex-column mx-lg-0 mx-auto">
-            <div class="card d-flex blur justify-content-center p-4 shadow-lg my-sm-0 my-sm-6 mt-8 mb-5">
-              <div class="text-center">
-                <h3 class="text-gradient text-primary">Nous contacter</h3>
-                <p class="mb-0">
-                  Pour toute question ou remarque concernant SonoRezé, n'hésitez pas à nous contacter via le mail suivant :</br></br> <a href="mailto:info@sonoreze.fr?subject=Contact depuis le site SonoRezé"><b>info@sonoreze.fr</b></a>
-                </p>
-                </br>
-                </br>
-                <img src="../assets/img/contact_icon.png" alt="Bulle contact" width="30%">
-              </div>
-            </div><!-- card -->
-          </div><!-- col-xl-6 -->
-          <div class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 end-0 text-center justify-content-center flex-column">
-            <div class="position-relative  h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center">
-              <img src="../assets/img/contact/tonitorfer_bandeau.jpg" alt="Contact oiseau - ToniTorfer" class="position-absolute  start-0" width="100%">
-            </div>
-          </div><!-- col-6 -->
-        </div><!-- row -->
-      </div><!-- container -->
-    </div><!-- page-header -->
-  </section>
+<section class="py-7">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 mx-auto text-center">
+        <h2 class="mb-0">Rezé</h2>
+        <h3 class="text-gradient text-primary mb-3">Une commune de l'agglomération Nantaise ...</h3>
+        <p>"<cite>Rezé, ville du Sud-Loire, située à quelques minutes du centre-ville de Nantes, est la 3e commune de Nantes Métropole, la communauté urbaine de Nantes et la 4e de Loire-Atlantique.</cite>" (<a href="https://www.reze.fr/la-ville/le-territoire/decouvrir-reze/" target="_blank">Plus de détail</a>).</p>
+        <p>Avec près de 43 000 habitants (rezéen.ne.s) au dernier recensement de 2019.</p>
+      </br>
+      <img src="../assets/img/territoire/Carte_zone.png" alt="Carte de situation de Rezé" width=100%>
+      </div>
+    </div>
+    <div class="row mt-6">
 
 
+    <div class="row">
+      <div class="col-lg-12 mx-auto text-center">
+        <h3 class="text-gradient text-primary mb-3">... avec de nombreuses spécificités "acoustiques"</h3>
+      </div>
+    </div>
+    <div class="row mt-6">
+
+      <div class="col-lg-4 col-md-8">
+        <div class="card bg-gradient-primary">
+          <div class="card-body">
+            <h6 class="text-white mb-0 font-weight-bolder" align="center">Influence directe de l'aéroport de Nantes Atlantique</h6>
+            </br>
+            <img src="../assets/img/territoire/Carte_zone_aeroport.png" alt="Carte de situation de l'aéroport" width=100%>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-8 ms-md-auto">
+        <div class="card bg-gradient-primary">
+          <div class="card-body">
+            <h6 class="text-white mb-0 font-weight-bolder" align="center">Proximité du périphérique Nantais</h6>
+            </br></br>
+            <img src="../assets/img/territoire/Carte_zone_peripherique.png" alt="Carte de situation du périphérique" width=100%>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-8 ms-md-auto">
+        <div class="card bg-gradient-primary">
+          <div class="card-body">
+            <h6 class="text-white mb-0 font-weight-bolder" align="center">De multiples espaces verts (parcs, jardins, ...)</h6>
+            </br>
+            <img src="../assets/img/territoire/Carte_zone_verdure.png" alt="Carte de situation de la végétation" width=100%>
+          </div>
+        </div>
+      </div>
+
+    </div>    
+  </div>
+</section>
+
+<section>
+    <div class="container">
+    <div class="row">
+      <div class="col-lg-12 mx-auto text-center">
+        <h5 class="text-gradient text-primary mb-3">Naviguer dans la carte sur le portail OpenStreetMap &copy;</h5>
+<iframe width="100%" height="500px" frameborder="0" allowfullscreen src="https://umap.openstreetmap.fr/fr/map/reze_911457?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false"></iframe><p><a href="https://umap.openstreetmap.fr/fr/map/reze_911457" target="_blank">Voir en plein écran</a></p>
 
 
+</div>
+</div>
+</div>
 
-
-
-
+</section>
 
 
 <!---------------------------------------------------------------------------------------->
@@ -298,7 +327,8 @@
           <p class="my-4 text-sm">
             Auteur : G. Petit (<a href="https://www.umrae.fr/" target="_blank">UMRAE</a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank">Université Gustave Eiffel</a>) - 2023</br>
             -</br>
-            Illustration "Oiseau sur smartphone" : <a href="http://tonitorfer.over-blog.com/" target="_blank">ToniTorfer</a> - tous droits réservés</br>
+            Illustration dans le bandeau : <a href="https://www.facebook.com/tonitorfer/" target="_blank">ToniTorfer</a> - tous droits réservés</br>
+            Fonds cartographiques : &copy; Contributeurs <a href="https://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> / <a href="https://www.maptiler.com" target="_blank">&copy; MapTiler</a></br>
             Template du site : All rights reserved. Copyright © <script>document.write(new Date().getFullYear())</script> Soft UI Design System by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
           </p>
         </div>
@@ -308,9 +338,8 @@
 </footer>
 <!---------------------------------------------------------------------------------------->
 
-
-<!---------------------------------------------------------------------------------------->
-<!--   Core JS Files   -->
+  <!-- -------- END FOOTER 5 w/ DARK BACKGROUND ------- -->
+  <!--   Core JS Files   -->
   <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
   <script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
   <script src="../assets/js/plugins/perfect-scrollbar.min.js"></script>
@@ -320,6 +349,7 @@
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
   <script src="../assets/js/soft-design-system.min.js?v=1.0.9" type="text/javascript"></script>
+
 </body>
 
 </html>
