--- a/resultats/discussion.html
+++ b/resultats/discussion.html
@@ -74,16 +74,16 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./historique.html" class="dropdown-item border-radius-md">
+              <a href="../projet/historique.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Historique</span>
               </a>
-              <a href="./demarche.html" class="dropdown-item border-radius-md">
+              <a href="../projet/demarche.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Démarche</span>
               </a>
-              <a href="./territoire.html" class="dropdown-item border-radius-md">
+              <a href="../projet/territoire.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Territoire</span>
               </a>
-              <a href="./equipe.html" class="dropdown-item border-radius-md">
+              <a href="../projet/equipe.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Équipe</span>
               </a>
 
@@ -92,16 +92,16 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./historique.html" class="dropdown-item border-radius-md">
+              <a href="../projet/historique.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Historique</span>
               </a>
-              <a href="./demarche.html" class="dropdown-item border-radius-md">
+              <a href="../projet/demarche.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Démarche</span>
               </a>
-              <a href="./territoire.html" class="dropdown-item border-radius-md">
+              <a href="../projet/territoire.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Territoire</span>
               </a>
-              <a href="./equipe.html" class="dropdown-item border-radius-md">
+              <a href="../projet/equipe.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Équipe</span>
               </a>
 
@@ -121,10 +121,10 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-           <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+           <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -133,10 +133,10 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+              <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -196,7 +196,7 @@
 
         <!-- Actualités -->
         <li class="nav-item ms-lg-0">
-          <a class="nav-link nav-link-icon me-2" href="./actu.html">
+          <a class="nav-link nav-link-icon me-2" href="../actu.html">
             <p class="d-inline text-sm z-index-1 font-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Actualités">Actualités</p>
           </a>
         </li>
@@ -204,7 +204,7 @@
 
         <!-- Contact -->
         <li class="nav-item ms-lg-0">
-          <a class="nav-link nav-link-icon me-2" href="./contact.html">
+          <a class="nav-link nav-link-icon me-2" href="../contact.html">
             <p class="d-inline text-sm z-index-1 font-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Nous contacter">Contact</p>
           </a>
         </li>
@@ -244,6 +244,18 @@
 
 <section class="py-7">
 
+  <div class="container">
+    <div class="row">
+ 
+      <div class="row justify-content-center text-center my-sm-5">
+        <div class="col-lg-12">
+          <h2 class="text-primary text-gradient">Remerciements</h2>
+          <p class="lead">L'équipe SonoRezé souhaite remercier chaleureusement tous les participants aux groupes de discussion, qui en livrant leur ressenti sans retenue ont permis d’établir un premier diagnostic sensible des environnements sonores à l’échelle d’une collectivité !</p>
+        </div><!-- col-lg-12 -->
+      </div>
+    </div><!-- row -->
+  </div><!-- container -->
+
 
   <div class="container">
     <div class="row">
@@ -251,7 +263,7 @@
       <div class="row justify-content-center text-center my-sm-5">
         <div class="col-lg-12">
           <h2 class="text-primary text-gradient">Diagnostic des environnements sonores</h2>
-          <p class="lead">Les entretiens de groupe ont permis de dresser un diagnostic discursif de l'environnement sonore de la ville de Rezé, mettant en évidence la diversité des sources sonores entendues sur le territoire, mais aussi la diversité des perceptions et l'importance des différentes temporalités qui composent les environnements sonores de la ville.</p>
+          <p>Les entretiens de groupe ont permis de dresser un diagnostic discursif de l'environnement sonore de la ville de Rezé, mettant en évidence (1) la diversité des sources sonores entendues sur le territoire, mais aussi (2) la diversité des perceptions et (3) l'importance des différentes temporalités qui composent les environnements sonores de la ville.</p>
         </div><!-- col-lg-6 -->
       </div>
     </div><!-- row -->
@@ -264,7 +276,7 @@
       <div class="col-lg-2">
         <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
           <br>
-          <h4 class="text-primary text-gradient">Une diversité de sources sonores</h4>
+          <h4 class="text-primary text-gradient">1/ Une diversité de sources sonores</h4>
         </div>
       </div><!-- col-lg-3 -->
 
@@ -362,7 +374,7 @@
       <div class="col-lg-2">
         <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
           <br>
-          <h4 class="text-primary text-gradient">Une diversité de perceptions</h4>
+          <h4 class="text-primary text-gradient">2/ Une diversité de perceptions</h4>
         </div>
       </div><!-- col-lg-3 -->
 
@@ -440,7 +452,7 @@
       <div class="col-lg-2">
         <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
           <br>
-          <h4 class="text-primary text-gradient">Les environnements sonores comme marqueur temporel</h4>
+          <h4 class="text-primary text-gradient">3/ Les environnements sonores comme marqueur temporel</h4>
         </div>
       </div><!-- col-lg-3 -->
 
@@ -869,7 +881,7 @@
           <p class="my-4 text-sm">
             Auteur : G. Petit (<a href="https://www.umrae.fr/" target="_blank">UMRAE</a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank">Université Gustave Eiffel</a>) - 2023</br>
             -</br>
-            Illustrations : <a href="http://tonitorfer.over-blog.com/" target="_blank">ToniTorfer</a> - tous droits réservés</br>
+            Illustrations : <a href="https://www.facebook.com/tonitorfer/" target="_blank">ToniTorfer</a> - tous droits réservés</br>
             Template du site : All rights reserved. Copyright © <script>document.write(new Date().getFullYear())</script> Soft UI Design System by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
           </p>
         </div>
