--- a/resultats/portail_interactif.html
+++ b/resultats/portail_interactif.html
@@ -74,16 +74,16 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./historique.html" class="dropdown-item border-radius-md">
+              <a href="../projet/historique.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Historique</span>
               </a>
-              <a href="./demarche.html" class="dropdown-item border-radius-md">
+              <a href="../projet/demarche.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Démarche</span>
               </a>
-              <a href="./territoire.html" class="dropdown-item border-radius-md">
+              <a href="../projet/territoire.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Territoire</span>
               </a>
-              <a href="./equipe.html" class="dropdown-item border-radius-md">
+              <a href="../projet/equipe.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Équipe</span>
               </a>
 
@@ -92,16 +92,16 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./historique.html" class="dropdown-item border-radius-md">
+              <a href="../projet/historique.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Historique</span>
               </a>
-              <a href="./demarche.html" class="dropdown-item border-radius-md">
+              <a href="../projet/demarche.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Démarche</span>
               </a>
-              <a href="./territoire.html" class="dropdown-item border-radius-md">
+              <a href="../projet/territoire.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Territoire</span>
               </a>
-              <a href="./equipe.html" class="dropdown-item border-radius-md">
+              <a href="../projet/equipe.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Équipe</span>
               </a>
 
@@ -121,10 +121,10 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-           <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+           <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -133,10 +133,10 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./participer_habitant.html" class="dropdown-item border-radius-md">
+              <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="./participer_collectivite.html" class="dropdown-item border-radius-md">
+              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
 
@@ -196,7 +196,7 @@
 
         <!-- Actualités -->
         <li class="nav-item ms-lg-0">
-          <a class="nav-link nav-link-icon me-2" href="./actu.html">
+          <a class="nav-link nav-link-icon me-2" href="../actu.html">
             <p class="d-inline text-sm z-index-1 font-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Actualités">Actualités</p>
           </a>
         </li>
@@ -204,7 +204,7 @@
 
         <!-- Contact -->
         <li class="nav-item ms-lg-0">
-          <a class="nav-link nav-link-icon me-2" href="./contact.html">
+          <a class="nav-link nav-link-icon me-2" href="../contact.html">
             <p class="d-inline text-sm z-index-1 font-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Nous contacter">Contact</p>
           </a>
         </li>
